<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        android:weightSum="6">

        <AutoCompleteTextView
            android:id="@+id/start_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:layout_margin="@dimen/padding"
            android:layout_weight="1"
            android:ems="15"
            android:focusable="true"
            />

        <AutoCompleteTextView
            android:id="@+id/destination_point"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:layout_margin="@dimen/padding"
            android:completionThreshold="1"
            android:layout_weight="1"
            android:focusable="true"

            />

        <com.dd.processbutton.iml.GenerateProcessButton
            android:id="@+id/btnUpload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/upload"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_margin="@dimen/padding"
            custom:pb_textComplete="@string/done"
            custom:pb_textProgress="@string/uploading" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/estimated_payment"
                android:textColor="@color/blue_dark"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/estimated_time"
                android:textColor="@color/blue_dark"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/padding"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/distance"
                android:textColor="@color/blue_dark"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>



    </LinearLayout>




</RelativeLayout>