<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ebm="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></fragment>

    </FrameLayout>

    <lt.lemonlabs.android.expandablebuttonmenu.ExpandableMenuOverlay
        android:id="@+id/button_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/circle_home"
        ebm:closeButtonSrc="@drawable/circle_close"
        ebm:leftButtonSrc="@drawable/circle_1"
        ebm:leftButtonText="@string/action_left"
        ebm:mainButtonSize="0.10"
        ebm:midButtonSrc="@drawable/circle_2"
        ebm:midButtonText="@string/action_mid"
        ebm:otherButtonSize="0.08"
        ebm:rightButtonSrc="@drawable/circle_3"
        ebm:rightButtonText="@string/action_right" />

    <android.support.v7.widget.AppCompatButton

        android:id="@+id/btn_clean_map"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/circle_home"


        />



</RelativeLayout>
